--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "dist/main.js",
   "module": "src/index.js",
   "scripts": {
-    "build": "webpack"
+    "test": "jest",
+    "build": "webpack --config webpack.prod.js",
+    "start": "webpack-dev-server --config webpack.dev.js"
   },
   "repository": {
     "type": "git",
@@ -21,9 +23,14 @@
     "@babel/core": "^7.4.5",
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
+    "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
     "babel-minify-webpack-plugin": "^0.3.1",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.8.0",
     "webpack": "^4.34.0",
-    "webpack-cli": "^3.3.4"
+    "webpack-cli": "^3.3.4",
+    "webpack-dev-server": "^3.7.1",
+    "webpack-merge": "^4.2.1"
   }
 }
