--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "src/index.js",
   "scripts": {
     "test": "jest",
-    "build": "webpack --config webpack.prod.js",
+    "build": "webpack --config webpack.prod.js && cp -f dist/main.js docs/js/snippet.js",
     "start": "webpack-dev-server --config webpack.dev.js"
   },
   "repository": {
@@ -20,17 +20,18 @@
   },
   "homepage": "https://github.com/insitu-project/setting-code-snippet#readme",
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/runtime": "^7.5.5",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
     "babel-minify-webpack-plugin": "^0.3.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
-    "webpack": "^4.34.0",
-    "webpack-cli": "^3.3.4",
-    "webpack-dev-server": "^3.7.1",
+    "webpack": "^4.36.1",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2",
     "webpack-merge": "^4.2.1"
   }
 }
