--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
     "babel-minify-webpack-plugin": "^0.3.1",
+    "dotenv": "^8.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
     "webpack": "^4.36.1",
